--- a/app/src/main/res/layout/fragment_newquote.xml
+++ b/app/src/main/res/layout/fragment_newquote.xml
@@ -8,17 +8,14 @@
     tools:context=".Fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <ScrollView
-        android:id="@+id/background"
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/options"
             android:elevation="2dp"
             android:background="@color/white"
             android:layout_width="match_parent"
@@ -74,51 +71,144 @@
                 android:text="Cor do plano de fundo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <Button
+                android:layout_margin="2dp"
+                android:drawableTint="@color/colorPrimaryDark"
+                android:drawableEnd="@drawable/ic_check_black_24dp"
+                android:text="@string/salvar"
+                android:id="@+id/save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                 android:layout_gravity="center"
+                android:background="@color/transparent"
+                 />
         </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <EditText
-                android:layout_margin="15dp"
-                android:id="@+id/frase"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/transparent"
-                android:hint="Escreva sua frase"
-                android:imeOptions="actionNext"
-                android:inputType="textMultiLine"
-                android:textAlignment="center"
-                android:textSize="32sp"
-                android:textStyle="italic"
-                android:textColor="@color/black"
-                android:typeface="monospace" />
-            <EditText
-                android:layout_marginEnd="5dp"
-                android:id="@+id/author"
-                android:imeActionLabel="Salvar"
-                android:inputType="textMultiLine"
-                android:imeOptions="actionDone"
-                android:layout_gravity="end"
-                android:hint="Autor"
-                android:backgroundTint="@color/transparent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <Button
-                android:id="@+id/save"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/colorPrimary"
-                android:background="@drawable/retangle"
-                android:text="@string/salvar"
-                android:layout_gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </LinearLayout>
-    </ScrollView>
+
+           <LinearLayout
+               android:layout_centerInParent="true"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="vertical">
+
+
+               <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                   android:id="@+id/card"
+                   android:hapticFeedbackEnabled="false"
+                    app:cardBackgroundColor="@color/white"
+                   android:layout_margin="15dp"
+                   app:cardCornerRadius="10dp"
+                   android:elevation="2dp"
+                   android:layout_width="match_parent"
+                   android:layout_gravity="center|top"
+                   android:layout_height="wrap_content"
+                   >
+                   <LinearLayout
+                       android:orientation="vertical"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content">
+                       <LinearLayout
+                           android:background="@color/transparent"
+                           android:layout_margin="3dp"
+                           android:elevation="3dp"
+                           android:padding="10dp"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content">
+                           <de.hdodenhof.circleimageview.CircleImageView
+                               android:id="@+id/userpic"
+                               android:src="@drawable/penguin"
+                               android:layout_width="50dp"
+                               android:layout_height="50dp" />
+
+                           <TextView
+                               android:id="@+id/username"
+                               android:padding="10dp"
+                               android:text="@string/username"
+                               android:textSize="16sp"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content" />
+
+                       </LinearLayout>
+                       <LinearLayout
+                           android:background="@color/black"
+                           android:id="@+id/category"
+                           android:layout_width="match_parent"
+                           android:layout_height="5dp"
+                           android:orientation="horizontal" />
+                       <LinearLayout
+                           android:padding="25dp"
+                           android:orientation="vertical"
+                           android:id="@+id/background"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content">
+                           <EditText
+                               android:backgroundTint="@color/transparent"
+                               android:id="@+id/quote"
+                               android:padding="5dp"
+                               android:textAlignment="center"
+                               android:textSize="18sp"
+                               android:hint="@string/quote"
+                               android:layout_width="match_parent"
+                               android:layout_height="wrap_content" />
+                           <EditText
+                               android:backgroundTint="@color/transparent"
+                               android:id="@+id/author"
+                               android:padding="5dp"
+                               android:textAlignment="textEnd"
+                               android:textSize="16sp"
+                               android:hint="@string/author"
+                               android:layout_width="match_parent"
+                               android:layout_height="wrap_content" />
+                       </LinearLayout>
+                       <LinearLayout
+                           android:background="@color/transparent"
+                           android:layout_margin="5dp"
+                           android:elevation="1dp"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content">
+                           <CheckBox
+                               android:layout_marginStart="5dp"
+                               android:padding="5dp"
+                               android:button="@drawable/favoritecheck"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content" />
+                           <ImageButton
+                               android:src="@drawable/delete"
+                               android:background="@color/transparent"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content" />
+
+                           <ImageButton
+                               android:src="@drawable/share"
+                               android:background="@color/transparent"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content" />
+                           <ImageButton
+                               android:src="@drawable/copy"
+                               android:background="@color/transparent"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content" />
+
+
+                       </LinearLayout>
+
+                   </LinearLayout>
+
+
+
+
+
+
+               </android.support.v7.widget.CardView>
+
+           </LinearLayout>
+
+
+
+    </RelativeLayout>
 
 
 </FrameLayout>
