--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -3,88 +3,103 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
     android:hapticFeedbackEnabled="false"
-     android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginStart="25dp"
-    android:layout_marginEnd="25dp"
-    app:cardCornerRadius="20dp"
-    android:elevation="4dp"
+    app:cardBackgroundColor="@color/white"
+    android:layout_margin="15dp"
+    app:cardCornerRadius="10dp"
+    android:elevation="2dp"
     android:layout_width="match_parent"
     android:layout_gravity="center|top"
-     android:layout_height="wrap_content"
-     >
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <com.google.android.gms.ads.AdView
-            android:visibility="invisible"
-            xmlns:ads="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/adView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
-        </com.google.android.gms.ads.AdView>
         <LinearLayout
-            android:layout_below="@id/category"
-            android:layout_marginTop="5dp"
-            android:layout_margin="10dp"
-            android:id="@+id/content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="@color/transparent"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/userpic"
+                android:src="@drawable/penguin"
+                android:layout_width="30dp"
+                android:layout_height="30dp" />
 
             <TextView
+                android:id="@+id/username"
+                android:padding="10dp"
+                android:text="@string/username"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:background="@color/black"
+            android:id="@+id/category"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:orientation="horizontal" />
+        <LinearLayout
+            android:padding="25dp"
+            android:orientation="vertical"
+            android:id="@+id/background"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:backgroundTint="@color/transparent"
                 android:id="@+id/quote"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:layout_marginStart="15dp"
-                android:text="@string/quote"
+                android:padding="5dp"
                 android:textAlignment="center"
-                android:textSize="32sp" />
-
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-
-                android:text="@string/author"
-                android:textAlignment="center"
-                android:textSize="32sp"
-                android:textStyle="bold" />
-            <LinearLayout
-                android:background="@drawable/line"
-                android:gravity="center"
+                android:textSize="18sp"
+                android:hint="@string/quote"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <CheckBox
-                    android:id="@+id/like"
-                    android:button="@drawable/favoritecheck"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <ImageButton
-                    android:background="@color/transparent"
-                    android:id="@+id/remove"
-                    android:src="@drawable/delete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
+                android:layout_height="wrap_content" />
+            <TextView
+                android:backgroundTint="@color/transparent"
+                android:id="@+id/author"
+                android:padding="5dp"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
+                android:hint="@string/author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:background="@color/transparent"
+            android:layout_margin="5dp"
+            android:elevation="1dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <CheckBox
+                android:layout_marginStart="5dp"
+                android:padding="5dp"
+                android:button="@drawable/favoritecheck"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageButton
+                android:id="@+id/remove"
+                android:src="@drawable/delete"
+                android:background="@color/transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageButton
+                android:src="@drawable/share"
+                android:background="@color/transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageButton
+                android:src="@drawable/copy"
+                android:background="@color/transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
         </LinearLayout>
 
-        <LinearLayout
-
-            android:id="@+id/category"
-            android:layout_gravity="start"
-            android:background="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="vertical" />
-
-    </RelativeLayout>
+    </LinearLayout>
 
 
 
