--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -73,6 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <CheckBox
+                android:id="@+id/like"
                 android:layout_marginStart="5dp"
                 android:padding="5dp"
                 android:button="@drawable/favoritecheck"
@@ -86,11 +87,13 @@
                 android:layout_height="wrap_content" />
 
             <ImageButton
+                android:id="@+id/share"
                 android:src="@drawable/share"
                 android:background="@color/transparent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <ImageButton
+                android:id="@+id/copy"
                 android:src="@drawable/copy"
                 android:background="@color/transparent"
                 android:layout_width="wrap_content"
