--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,18 +25,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <com.github.mmin18.widget.RealtimeBlurView
-        app:realtimeOverlayColor="#97ffffff"
+        app:realtimeOverlayColor="#f0ffffff"
         app:realtimeBlurRadius="0dp"
         android:id="@+id/rootblur"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
-    <ProgressBar
-        android:visibility="invisible"
-        android:indeterminateDrawable="@mipmap/ic_launcher"
+    <com.github.silvestrpredko.dotprogressbar.DotProgressBar
         android:id="@+id/progress_bar"
         android:indeterminate="true"
         android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
+        app:amount="2"
+        app:duration="500"
+        app:startColor="@color/colorPrimary"
+        app:endColor="@color/white"
         android:layout_height="wrap_content" />
     <LinearLayout
         android:visibility="invisible"
@@ -54,12 +56,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <ImageView
-            android:adjustViewBounds="true"
-            android:id="@+id/offlineimage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+             android:id="@+id/offlineimage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
 
 
     </LinearLayout>
+
 </RelativeLayout>
