--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,9 +52,9 @@
             </LinearLayout>
 
             <android.support.v7.widget.Toolbar
-
+                app:collapseIcon="@drawable/ic_saturn_and_other_planets"
                 app:title="@string/app_name"
-                app:navigationIcon="@mipmap/ic_launcher"
+                app:navigationIcon="@drawable/ic_notification"
                 android:id="@+id/toolbar"
                 app:layout_collapseMode="parallax"
                 app:titleTextColor="@color/black"
@@ -86,6 +86,13 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </LinearLayout>
+    <com.huxq17.swipecardsview.SwipeCardsView
+        android:background="@color/lwhite"
+        android:visibility="invisible"
+        android:id="@+id/tutorialcards"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 
 
