--- a/app/src/main/res/layout/pics.xml
+++ b/app/src/main/res/layout/pics.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+    <LinearLayout
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
     <ImageView
         android:hapticFeedbackEnabled="true"
         android:layout_margin="2dp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:adjustViewBounds="true"
         android:id="@+id/pic"
         android:src="@drawable/penguin"
         android:scaleType="centerCrop"
         android:layout_width="100dp"
         android:layout_height="100dp">
+    </ImageView>
 
-</ImageView>
+</LinearLayout>
+
